Correct display payment component on mobile size

--- a/PetsShelter_Front/PetsShelter_Angular/src/app/payment/payment.component.css
+++ b/PetsShelter_Front/PetsShelter_Angular/src/app/payment/payment.component.css
@@ -34,7 +34,8 @@ body{
 }
 
 .card .card-block {
-  padding: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .order-card i {
@@ -56,7 +57,7 @@ body{
 }
 
 form.checkout {
-  max-width: 500px;
+  /*max-width: 500px; */
 
   text-align: center;
   border: 2px solid #eee;
